# ocr-benchmark

./: .gitignore  README.md  config.yaml  pyproject.toml
ocrbench/: __init__.py  config.py  metrics.py  preprocess.py  resources.py  run.py  scorecard.py
ocrbench/engines/: __init__.py  base.py  docai_engine.py  paddle_engine.py
tests/: conftest.py  test_config.py  test_engines_base.py  test_metrics.py  test_paddle_engine.py  test_preprocess.py  test_runner.py  test_scorecard.py
