[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrbench"
version = "0.1.0"
description = "Benchmark PaddleOCR vs Google Document AI on scanned handwritten English exam booklets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "jiwer>=3.0",                     # WER/CER scoring
    "pymupdf>=1.23",                  # PDF -> PNG rendering
    "psutil>=5.9",                    # CPU/RAM resource sampling
    "rapidfuzz>=3.0",                 # fuzzy boilerplate matching
    "pyspellchecker>=0.8",            # reference-free dictionary_validity proxy
    "google-cloud-documentai>=2.20",  # Doc AI engine; a normal cross-platform
                                       # client library, so it's core, not an extra
]

[project.optional-dependencies]
# paddleocr is a normal pip package, but it depends on paddlepaddle, which is
# NOT listed here or anywhere in this file: paddlepaddle (or paddlepaddle-gpu)
# must be installed manually, matched to the CUDA version of whatever machine
# runs real inference (e.g. Colab GPU) -- see the README for the exact command.
paddle = ["paddleocr>=3.0"]
# pynvml is genuinely optional: resources.py degrades gracefully (GPU metrics
# come back as None) when it's missing, so it isn't worth forcing on CPU-only
# installs.
gpu = ["pynvml>=11.5"]
dev = ["pytest>=7.0"]

[project.scripts]
ocrbench = "ocrbench.run:main"
ocrbench-score = "ocrbench.scorecard:main"

[tool.setuptools.packages.find]
include = ["ocrbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
