[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrbench"
version = "0.1.0"
description = "Benchmark PaddleOCR vs Google Document AI on scanned handwritten English exam booklets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "jiwer>=3.0",                     # WER/CER scoring
    "pymupdf>=1.23",                  # PDF -> PNG rendering
    "psutil>=5.9",                    # CPU/RAM resource sampling
    "rapidfuzz>=3.0",                 # fuzzy boilerplate matching
    "pyspellchecker>=0.8",            # reference-free dictionary_validity proxy
    "google-cloud-documentai>=2.20",  # Doc AI engine; a normal cross-platform
                                       # client library, so it's core, not an extra
    "paddleocr>=3.0",                 # Paddle engine wrapper. Confirmed via
                                       # `pip install --dry-run paddleocr` that
                                       # it does NOT pull in paddlepaddle as a
                                       # transitive dependency, so it's core too.
]

# paddlepaddle (or paddlepaddle-gpu) is NOT listed anywhere in this file, in
# core deps or extras: it must be installed manually, matched to the CUDA
# version of whatever machine actually runs Paddle inference (e.g. Colab GPU)
# -- see the README for the exact command. Everything else in this package,
# including paddleocr itself, imports and tests fine without it.
[project.optional-dependencies]
# pynvml is genuinely optional: resources.py degrades gracefully (GPU metrics
# come back as None) when it's missing, so it isn't worth forcing on CPU-only
# installs.
gpu = ["pynvml>=11.5"]
dev = ["pytest>=7.0"]

[project.scripts]
ocrbench = "ocrbench.run:main"
ocrbench-score = "ocrbench.scorecard:main"

[tool.setuptools.packages.find]
include = ["ocrbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
